Crypto: Small improvements in introduction

--- a/skript/crypto/crypto.bib
+++ b/skript/crypto/crypto.bib
@@ -14,3 +14,13 @@
   url={http://splashdata.com/press/pr121023.htm},
   urldate={2014-05-18}
 }
+
+@book{crypto:stephan2011kryptographie,
+  title={Kryptographie und IT-Sicherheit: Grundlagen und Anwendungen},
+  author={Stephan Spitz and Michael Pramateftakis and Joachim Swoboda},
+  isbn={9783834814876},
+  series={Studium : IT-Sicherheit und Datenschutz},
+  year={2011},
+  publisher={Vieweg+Teubner Verlag},
+	pages={95-106},
+}
