Crypto: Small fixes

--- a/skript/crypto/crypto.tex
+++ b/skript/crypto/crypto.tex
@@ -161,7 +161,7 @@ Preimage-Angriff auf MD5 bekannt. Ein Preimage-Angriff bedeutet, dass der
 Ausgabewert nicht frei gew"ahlt werden kann, sondern festgelegt ist (ein Angriff
 auf die schwache Kollisionsresistenz). Wenn man nun einen Passwort-Hash
 zur"uckrechnen will, ist bei einer "uberschaubaren Eingabemenge ein Brute-Force
-Angriff effektiver.
+Angriff die einfachste Möglichkeit.
 
 Bei einem Brute Force Angriff wird f"ur jeden Wert einer bestimmten
 Eingabemenge der Hash\-wert berechnet und mit dem Zielwert verglichen. In
@@ -188,8 +188,8 @@ in der Gr"ossenordnung von ~200 Billionen.
 \[
 	\sum_{i=1}^{8} \left(26 + 26 + 10\right)^i = 221'919'451'578'090
 \]
-Im Rahmen dieser Arbeit beschr"anken wir daher sowohl die Anzahl der m"Oglichen
-Zeichen wie auch die maximale L"Ange der zu knackenden Passw"Orter.
+Im Rahmen dieser Arbeit beschr"ankten wir daher sowohl die Anzahl der m"oglichen
+Zeichen wie auch die maximale L"ange der zu knackenden Passw"orter.
 
 \subsection{Zielsetzung}
 
