Add basic sections to part "Probleme mit grossen Problemen"

--- a/skript/crypto/crypto.tex
+++ b/skript/crypto/crypto.tex
@@ -214,8 +214,18 @@ d0763edaa9d9bd2a9516280e9044d885
 
 \section{Probleme mit grossen Problemen}
 
+Obwohl OpenCL gemacht ist für sehr grosse Probleme, st''osst es irgendwann an 
+seine Grenzen. Was diese Grenzen sind, wie man herausfindet wo diese bei der
+eingesetzten Hardware liegen und wie man das Problem so aufteilen kann, dass
+es trotzdem gerechnet werden kann.
+
+\subsection{(Hardware-)grenzen mit OpenCL}
+
 - Wo stossen wir an unsere Grenzen?
 - Bezug/Referenz auf Einleitung ("Uberlegungen zum Keyspace)
+
+\subsection{Aufteilung von grossen Problemen}
+
 - Was gibt es f"ur L"osungsans"atze?
 
 \section{L"osungsansatz}
