--- a/skript/crypto/crypto.bib
+++ b/skript/crypto/crypto.bib
@@ -24,3 +24,11 @@
   publisher={Vieweg+Teubner Verlag},
 	pages={95-106},
 }
+
+@article{crypto:opencl_ref,
+  title={OpenCL 1.2 Reference Pages},
+  author={Khronos Group Inc.},
+  year={2011},
+  url={http://www.khronos.org/registry/cl/sdk/1.2/docs/man/xhtml/},
+  urldate={2014-05-19}
+}
