--- a/skript/crypto/crypto.tex
+++ b/skript/crypto/crypto.tex
@@ -161,7 +161,7 @@ Preimage-Angriff auf MD5 bekannt. Ein Preimage-Angriff bedeutet, dass der
 Ausgabewert nicht frei gew"ahlt werden kann, sondern festgelegt ist (ein Angriff
 auf die schwache Kollisionsresistenz). Wenn man nun einen Passwort-Hash
 zur"uckrechnen will, ist bei einer "uberschaubaren Eingabemenge ein Brute-Force
-Angriff die einfachste Möglichkeit.
+Angriff die einfachste M"oglichkeit.
 
 Bei einem Brute Force Angriff wird f"ur jeden Wert einer bestimmten
 Eingabemenge der Hash\-wert berechnet und mit dem Zielwert verglichen. In
@@ -217,16 +217,19 @@ d0763edaa9d9bd2a9516280e9044d885
 \subsection{Einf"uhrung}
 
 Auch wenn OpenCL ausdr"ucklich daf"ur entwickelt wurde, mit riesigen Clustern
-von heterogenen Recheneinheiten sehr umfangreiche Probleme zu l"osen, so 
-st"osst man doch irgendwann an die Grenzen der Hardware oder der Implementierung.
-Denn jeder Kernel der ausgef"uhrt wird, ben"otigt Speicherplatz (Gr"osse des
-zur Verfügung stehenden Speichers, Hardware), muss irgendwie verwaltet werden 
-(Anzahl der maximal verwaltbaren Work-Items und Work-Groups, Implementierung) und 
-die Anzahl Dimensionen, die von einem Kernel verarbeitet werden kann, ist begrenzt
-(Work-Item-Dimension, Hardware \& Implementierung).
+von heterogenen Recheneinheiten sehr umfangreiche Probleme zu l"osen, so st"osst
+man doch irgendwann an die Grenzen der Hardware oder der Implementierung.  Denn
+jeder Kernel der ausgef"uhrt wird, ben"otigt Speicherplatz (Gr"osse des zur
+Verf"ugung stehenden Speichers, Hardware) und muss irgendwie verwaltet werden
+(Anzahl der maximal verwaltbaren Work-Items und Work-Groups, Implementierung).
+Zudem ist die Anzahl Dimensionen, die von einem Kernel verarbeitet werden kann,
+begrenzt (Work-Item-Dimension, Hardware \& Implementierung). Deshalb folgen in
+diesem Kapitel einige Betrachtungen dazu, wie man mit diesen Limitationen
+umgehen kann.
 
-Wir machen dazu im Rahmen behandelten Md5-Cracking folgende Betrachtungen:
-
+% TODO: Im Kapitel "Brute-Force Angriff auf MD5" werden fast die selben
+% Berechnungen (Kombinatorik) bereits gemacht. Ev kann man darauf verweisen,
+% anstatt sie hier nochmals zu machen?
 Angenommen wir verwenden nur den Zeichensatz [a-zA-Z0-9] sprich insgesamt 62 
 unterschiedliche Zeichen, die beliebig kombiniert werden k"onnen. Die 
 Kombinatorik sagt dazu, dass es also
@@ -255,9 +258,9 @@ Implementierung von Intel auch eine gr"ossere Anzahl WorkItems problemlos zu,
 wohingegen sich die Nvidia Implementation mit einer ``Out-of-resources''-Meldung 
 beendet.
 
-Genau um diese Grenzen soll es in diesem Abschnitt geben. Er soll aber in keinster
+Genau um diese Grenzen soll es in diesem Abschnitt gehen. Es soll aber in keinster
 Weise ersch"opfend die Grenzen von OpenCL oder alle Spezifikas der 
-Implementierungen eingegangen werden, sondern vielmehr für das Thema sensibilisiert 
+Implementierungen eingegangen werden, sondern vielmehr f"ur das Thema sensibilisiert 
 und m"ogliche Ans"atze f"ur den Umgang mit grossen Problemen in OpenCL aufgezeigt
 werden, was hoffentlich dazu f"uhren wird, dass der Leser/die Leserin ein Gesp"ur 
 f"ur eigene, auf die spezifische Hardware und Implementierung zugeschnittene 
@@ -266,9 +269,13 @@ Ans"atze entwickeln kann.
 
 \subsection{Grenzen von OpenCL}
 
+% TODO: Ich würde auf Erweiterungen gar nicht erst eingehen. Sie sind für uns ja
+% nicht sonderlich relevant.
 OpenCL wurde entwickelt um trotz einem m"glichst Plattform"ubergreifenden Ansatz 
 sehr flexibel auf die Spezifika der jeweiligen Hardware reagieren zu k"onnen, was
 auch das ebenfalls in OpenGL vorhandene Extension-System beinhaltet. Vor allem f"ur
+% TODO: Hier ebenfalls, ich würde OpenGL gar nicht erst erwähnen, sondern ganz
+% auf OpenCL fokussieren.
 Einsteiger in die OpenCL/OpenGL-Welt (hier sei erw"ahnt, dass hinter beiden 
 Technologien sehr "anhliche Grundkonzepte stehen) kann es dabei schwierig werden
 sich im Dschungel der Hardwaredaten und M"oglichkeiten zurechtzufinden. Auf die 
@@ -276,7 +283,7 @@ wichtigsten Einstiegspunkte und die f"ur unsere Problemstellung relevanten Punkt
 soll hier kurz eingegangen werden.
 
 
-\subparagraph{Hardwaremerkmale abfragen}
+\subsubsection{Hardwaremerkmale abfragen}
 
 Gerade weil OpenCL so unterschiedliche Typen Hardware unterst"utzt, von der ``normalen''
 Desktop-CPU bis zu f"ur HPC Anwendungen spezialisierte Rechenkarten, gibt es einen
@@ -284,17 +291,16 @@ sehr m"achtigen Weg die jeweiligen Hardwaremerkmale abzufragen. Das kann soweit
 gehen, dass w"ahrend der Laufzeit die Hardwarekonfiguration abgefragt und das 
 Problem dynamisch auf die vorhandene Hardware optimiert wird.
 
-An dieser Stelle macht es Sinn sich nochmals vereinfacht die Top-Down-Struktur von 
-OpenCL vor Augen zu f"uhren: 
-
-   Plattform -> Compute Device -> Compute Unit (-> Work Group -> Work Item -> Work Item Dimension)
-   
-In dieser Reihenfolge fragt man auch die Hardwaremerkmale ab. OpenCL stellt dazu 
-folgende Funktionen zur Verf"gung:
+An dieser Stelle macht es Sinn sich nochmals vereinfacht die Top-Down-Struktur
+von OpenCL (wie bereits in Abbildung \ref{hardware:opencl} gezeigt) vor Augen zu
+f"uhren: \texttt{Platform $\rightarrow$ Compute Device $\rightarrow$ Compute
+	Unit ($\rightarrow$ Work Group $\rightarrow$ Work Item $\rightarrow$ Work Item
+Dimension)}. In dieser Reihenfolge werden auch die Hardwaremerkmale abgefragt.
+OpenCL 1.2 stellt dazu folgende Funktionen zur Verf"ugung:
 
 \begin{description}
  \item [clGetPlatformIDs()] gibt eine Liste der vorhandenen Plattformen zur"uck.
- \item [clGetPlatformInfo()] returniert die Merkmale der aktuellen Plattform. Das heisst,
+ \item [clGetPlatformInfo()] retourniert die Merkmale der aktuellen Plattform. Das heisst,
                             der Herausgeber der Implementation, die imlementierte 
                             OpenCL Version und allf"allig von der Plattform 
                             zus"atzlich unterst"utzte Erweiterungen (Das m"ussen
@@ -311,15 +317,16 @@ folgende Funktionen zur Verf"gung:
                             dieser Merkmale soll im Folgenden noch eingegangen werden.
 \end{description}
 
-Die genauen Parameter und R"uckgabewerte soll der Leser der offiziellen Dokumentation
-\cite{crypto:opencl_ref} entnehmen.
+\noindent Die genauen Parameter und R"uckgabewerte k"onnen der offiziellen
+Dokumentation \cite{crypto:opencl_ref} entnommen werden.
 
-Der besseren Verst"andlichkeit wegen soll hier zuerst ein kurzes Code-Beispiel f"ur 
-einen typischen Desktop-Computer mit einer OpenCL f"ahigen CPU und einer modernen 
-Grafikkarte aufgef"uhrt werden. Es ist exemplarisch, der Anschaulichkeit wegen in
-Pseudocode verfasst und repr"asentiert weder den vollen Umfang der 
-R"uckgabewerte noch die real ben"otigten Parameter!
+Um das diese Begriffe etwas verst"andlicher zu machen, wird ein kurzes
+Code-Beispiel f"ur einen typischen Desktop-Computer mit einer OpenCL f"ahigen
+CPU und einer modernen Grafikkarte aufgeführt. Es ist exemplarisch, der
+Anschaulichkeit wegen in Pseudocode verfasst und repr"asentiert weder den vollen
+Umfang der R"uckgabewerte noch die real ben"otigten Parameter!
 
+\begin{small}
 \begin{verbatim}
 > clGetPlatformIDs()
 0
@@ -368,20 +375,21 @@ Kernel properties:
 Datatypes:
  - Flotating point:      Single & Double precision
  - Preferred vector size: 1 (all supported  types)
-
->
 \end{verbatim}
+\end{small}
 
+\vspace{1em}
 
-Zu einzelnen Punkten aus dem Codebeispiel hier eine kurze Erläuterung:
+\noindent Zu einzelnen Punkten aus dem Codebeispiel hier eine kurze Erl"auterung:
 
 \begin{description}
  \item [Version] Implementierte bzw. Unterst"utzte OpenCL Version
- \item [Profile] ``full'' oder ``embedded'' (in OpenCL 1.2)
- \item [Type]    CPU, GPU, ACCELERATOR (i.e. spezielle OpenCL Beschleuniger)
+ \item [Profile] \texttt{full} oder \texttt{embedded} (in OpenCL 1.2)
+ \item [Type]    \texttt{CPU}, \texttt{GPU} oder \texttt{ACCELERATOR}
  \item [Compute Units] Anzahl der physisch vorhandenen Compute Units. Dies ist
-                 die Anzahl effektiv parallel ausgef'\'uhrter Kernel
+                 die Anzahl effektiv parallel ausgef"uhrter Kernel
  \item [Max work group size] Maximale Anzahl Work Items in einer Work Group
+ % TODO: Stimmt das "minimal 3"? Sind das nicht maximal 3?
  \item [Max work item dim.] Maximale direkt im Work Item bearbeitbare Dimensionen, minimal 3
  \item [Max work item size] Maximale Anzahl von Work Items in einer Work Group nach
                  Dimensionen (Ist je nach Ger"at unterschiedlich je nach
@@ -393,14 +401,16 @@ Zu einzelnen Punkten aus dem Codebeispiel hier eine kurze Erläuterung:
 \end{description}
 
 
-Dabei gelten anhand der im Code gezeigten Zahlen folgende Regeln:\cite{crypto:opencl_ref}
+\noindent Dabei gelten anhand der im Code gezeigten Zahlen gem"ass
+Spezifikation\cite{crypto:opencl_ref} folgende Regeln:
+
 \begin{itemize}
  \item Eine Work Group wird nur auf einer Compute Unit aufgef"uhrt (1 Work Group = 1 
        Compute Device) 
  \item Die Anzahl der Work-Items pro Work-Group darf insgesamt 8192 nicht "ubersteigen (global work size)
  \item Dabei d"urfen die in ``Max work item size'' angegebenen Werte in der jeweiligen 
-       Dimension nicht "uberstiegen werden (local work size [x,y,z,\ldots]). \[x+y+z\] 
-       darf dabei aber nicht gr"osser werden als ``Max work group size''.
+       Dimension nicht "uberstiegen werden (local work size $[x,y,z,\ldots]$).
+			 Die Summe $x + y + z$ darf dabei aber nicht gr"osser werden als ``Max work group size''.
  \item Die Anzahl effektiv verwendeter Work Item Dimensionen darf im Bereich von 1 bis
        ``Max work item dim.'' liegen.
 \end{itemize}
