--- a/skript/skript.tex
+++ b/skript/skript.tex
@@ -7,6 +7,7 @@
 %\documentclass[a4paper,12pt]{book}
 %\documentclass[a4paper]{book}
 \documentclass{book}
+\usepackage{etex}
 \usepackage{geometry}
 \geometry{papersize={170mm,240mm},total={140mm,200mm},top=21mm,bindingoffset=10mm}
 \usepackage[ngerman]{babel}
@@ -28,12 +29,14 @@
 \usepackage{hyperref}
 \usepackage{tikz}
 \usepackage{placeins}
+\usepackage{float}
 %\usetikzlibrary{arrows,decorations.pathmorphing,positioning,fit,petri}
 %\usetikzlibrary{calc,intersections,through,backgrounds,graphs}
 %\usetikzlibrary{patterns,decorations.pathreplacing}
 %\usetikzlibrary{shapes,snakes,trees}
-%\usetikzlibrary{decorations.pathreplacing}
+\usetikzlibrary{decorations.pathreplacing}
 %\usetikzlibrary{patterns}
+\usetikzlibrary{arrows}
 \usepackage{listings}
 \lstdefinestyle{Matlab}{
   numbers=left,
