--- a/skript/anwendungen.tex
+++ b/skript/anwendungen.tex
@@ -50,4 +50,30 @@ parallesierbare Version des Potenzalgorithmus gefunden.
 Konvergenz eines iterativen Verfahrens zur L"osung linearer Gleichungen
 verbessern kann.
 
+{\em Reto Christen} und {\em Philipp Solenthaler} l"osen das Potentialproblem
+mit OpenMPI. Sie untersuchen, wie sich der bestehende Code f"ur das
+W"armeleitungsproblem, welcher nur das Jacobi-Verfahren unterst"utzt,
+auf die Verwendung des Gauss-Seidel-Algorithmus erweitern l"asst, und
+wie sich dies auf die Laufzeit auswirkt.
+
+{\em Andreas Linggi} und {\em Stefan Steiner} wenden die L"osung des
+Potentialproblems auf eine Visualisierung der Greenschen Funktion an.
+
+{\em Fabian Klein} und {\em Thomas Ziegler} wagen sich an die numerische
+L"osung der Gleichung von Burgers. Als Prototyp einer nicht linearen
+partiellen Differentialgleichung, die nahe verwandt ist mit den
+Str"omungsgleichungen, l"asst sich aus deren L"osung viel "uber "ahnliche
+Modelle zum Beispiel in der numerischen Wetterprognose lernen.
+
+Damit schliesst sich der Kreis der Awendungen. Lewis Fry Richardson hat
+sich vor ziemlich genau hundert Jahren eine Methode zur Berechnung der
+Wetterentwicklung ausgedacht. Zu deren Durchf"uhrung stellte er sich
+eine {\em Forecast Fatory} vor, ein riesiges, Theaterartiges Geb"aude,
+wo viele Computer, als Arbeiter mit Rechenmaschinen an der
+Berechnung der Atmosph"arenentwicklung f"ur jeweils ein Teilgebiet arbeiten,
+und ihre Resultate an ihre Nachbar-Rechner weitergeben. 
+Man kann also durchaus sagen, dass Richardson der erste war, der die Vision
+eines massiv parallelen Rechners zur L"osung eines HPC Problems hatte,
+wenngleich mit anderer ``Technologie'' als unsere heutigen HPC Cluster.
+
 
